--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,11 @@ obj/Debug/net8.0/dijitalPano.csproj.AssemblyReference.cache
 obj/Debug/net8.0/dijitalPano.assets.cache
 obj/dijitalPano.csproj.nuget.dgspec.json
 obj/dijitalPano.csproj.nuget.g.props
+obj/dijitalPano.csproj.nuget.dgspec.json
+obj/dijitalPano.csproj.nuget.g.props
+obj/project.assets.json
+obj/project.nuget.cache
+obj/Debug/net8.0/apphost.exe
+obj/Debug/net8.0/dijitalPano.AssemblyInfo.cs
+obj/Debug/net8.0/dijitalPano.AssemblyInfoInputs.cache
+obj/Debug/net8.0/dijitalPano.assets.cache
