--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,8 @@ obj/dijitalPano.csproj.nuget.dgspec.json
 obj/dijitalPano.csproj.nuget.g.props
 obj/project.assets.json
 obj/project.nuget.cache
+obj/Debug/net8.0/project.razor.vscode.bin
+obj/Debug/net8.0/dijitalPano.AssemblyInfo.cs
+obj/Debug/net8.0/dijitalPano.AssemblyInfoInputs.cache
+obj/Debug/net8.0/dijitalPano.GeneratedMSBuildEditorConfig.editorconfig
+obj/Debug/net8.0/project.razor.vscode.bin
