Gitignore bitmek üzere

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@ obj/Debug/net8.0/dijitalPano.AssemblyInfo.cs
 obj/Debug/net8.0/dijitalPano.AssemblyInfoInputs.cache
 obj/Debug/net8.0/dijitalPano.GeneratedMSBuildEditorConfig.editorconfig
 obj/Debug/net8.0/project.razor.vscode.bin
+obj/Debug/net8.0/project.razor.vscode.bin
